ipad alignment fixed

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,1 +1,14 @@
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  /* For portrait layouts only */
+  .carousel-inner {
+    height: 490px;
+  }
 
+  .news-events-last {
+    display: none;
+  }
+  .marquee-main-row {
+    display: flex;
+    justify-content: center;
+  }
+}
